--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -42,8 +42,9 @@
             </p>
             <div class="w-full h-[1px] mt-s8" style="background-color:#DDDDDD;"></div>
             <p></p>
-            <variant-radios class="block relative mt-s8 " data-section="{{ section.id }}" data-url="{{ product.url }}">
+            <variant-radios class="block relative mt-s8 " data-section="{{ section.id }}" data-url="{{ product.url }}" data-product-page="true">
                 <fieldset class="flex gap-s2 pt-s6">
+                    {% render 'product-colors', product: product, preview: false %}
                     {% for option in product.options_with_values %}
                         {% if option.name == "Color" %}
                             {% for optionValue in option.values %}
@@ -67,7 +68,7 @@
                     {{ product.variants | json }}
                 </script>
                 <a class="inline-block mt-s4">Size Guide</a>
-            </variant-radios data-section="{{ section.id }}" data-url="{{ product.url }}">
+            </variant-radios>
                     {%- assign product_form_id = 'product-form-' | append: section.id -%}
 
                     <product-form class="{% unless currentVariant.available %}hidden{% endunless %}">
