--- a/assets/application.css.liquid
+++ b/assets/application.css.liquid
@@ -241,6 +241,7 @@ input[type="radio"]{
 }
 
 input.color-selector{
+  background-color:transparent;
   display: flex;
   height: 36px;
   width: 36px;
@@ -261,8 +262,10 @@ input.color-selector + label, input.color-selector + * label{
 input.color-selector:checked{
   border-width: 1px;
   --tw-border-opacity: 1;
-  border-color: rgb(34 34 34 / var(--tw-border-opacity));
+  border-color: rgb(181 181 181 / var(--tw-border-opacity));
 }
+
+z
 
 input.color-selector:checked + label, input.color-selector:checked + * label{
   display:inline-block;
@@ -270,11 +273,10 @@ input.color-selector:checked + label, input.color-selector:checked + * label{
 
 input.color-selector::before{
   content:"";
+  background-color: var(--color-selector-bg);
   height: 26px;
   width: 26px;
   border-radius: 50%;
-  --tw-bg-opacity: 1;
-  background-color: rgb(34 34 34 / var(--tw-bg-opacity));
 }
 
 input.color-selector.sm::before{
@@ -583,6 +585,12 @@ nav.search-mode .search input{
   border-bottom-width: 1px;
   --tw-border-opacity: 1;
   border-color: rgb(230 230 230 / var(--tw-border-opacity));
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
 
 /* purgecss start ignore */
@@ -3000,6 +3008,10 @@ video {
   visibility: visible;
 }
 
+#app .invisible{
+  visibility: hidden;
+}
+
 #app .static{
   position: static;
 }
@@ -3084,6 +3096,62 @@ video {
   top: 50%;
 }
 
+#app .top-0{
+  top: 0px;
+}
+
+#app .left-0{
+  left: 0px;
+}
+
+#app .top-0{
+  top: 0px;
+}
+
+#app .left-0{
+  left: 0px;
+}
+
+#app .top-0{
+  top: 0px;
+}
+
+#app .left-0{
+  left: 0px;
+}
+
+#app .top-0{
+  top: 0px;
+}
+
+#app .left-0{
+  left: 0px;
+}
+
+#app .top-0{
+  top: 0px;
+}
+
+#app .left-0{
+  left: 0px;
+}
+
+#app .top-0{
+  top: 0px;
+}
+
+#app .left-0{
+  left: 0px;
+}
+
+#app .top-0{
+  top: 0px;
+}
+
+#app .left-0{
+  left: 0px;
+}
+
 #app .isolate{
   isolation: isolate;
 }
@@ -3094,6 +3162,10 @@ video {
 
 #app .z-20{
   z-index: 20;
+}
+
+#app .z-10{
+  z-index: 10;
 }
 
 #app .order-first{
@@ -3128,6 +3200,11 @@ video {
 #app .mx-s8{
   margin-left: 40px;
   margin-right: 40px;
+}
+
+#app .mx-auto{
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #app .mr-s4{
@@ -3224,6 +3301,146 @@ video {
 
 #app .mt-\[28px\]{
   margin-top: 28px;
+}
+
+#app .mt-s5{
+  margin-top: 20px;
+}
+
+#app .mt-s4{
+  margin-top: 16px;
+}
+
+#app .mt-0{
+  margin-top: 0px;
+}
+
+#app .mt-s8{
+  margin-top: 40px;
+}
+
+#app .mt-s6{
+  margin-top: 24px;
+}
+
+#app .mt-s5{
+  margin-top: 20px;
+}
+
+#app .mt-s4{
+  margin-top: 16px;
+}
+
+#app .mt-0{
+  margin-top: 0px;
+}
+
+#app .mt-s8{
+  margin-top: 40px;
+}
+
+#app .mt-s6{
+  margin-top: 24px;
+}
+
+#app .mt-s5{
+  margin-top: 20px;
+}
+
+#app .mt-s4{
+  margin-top: 16px;
+}
+
+#app .mt-0{
+  margin-top: 0px;
+}
+
+#app .mt-s8{
+  margin-top: 40px;
+}
+
+#app .mt-s6{
+  margin-top: 24px;
+}
+
+#app .mt-s5{
+  margin-top: 20px;
+}
+
+#app .mt-s4{
+  margin-top: 16px;
+}
+
+#app .mt-0{
+  margin-top: 0px;
+}
+
+#app .mt-s8{
+  margin-top: 40px;
+}
+
+#app .mt-s6{
+  margin-top: 24px;
+}
+
+#app .mt-s5{
+  margin-top: 20px;
+}
+
+#app .mt-s4{
+  margin-top: 16px;
+}
+
+#app .mt-0{
+  margin-top: 0px;
+}
+
+#app .mt-s8{
+  margin-top: 40px;
+}
+
+#app .mt-s6{
+  margin-top: 24px;
+}
+
+#app .mt-s5{
+  margin-top: 20px;
+}
+
+#app .mt-s4{
+  margin-top: 16px;
+}
+
+#app .mt-0{
+  margin-top: 0px;
+}
+
+#app .mt-s8{
+  margin-top: 40px;
+}
+
+#app .mt-s6{
+  margin-top: 24px;
+}
+
+#app .mt-s5{
+  margin-top: 20px;
+}
+
+#app .mt-s4{
+  margin-top: 16px;
+}
+
+#app .mt-0{
+  margin-top: 0px;
+}
+
+#app .mt-s8{
+  margin-top: 40px;
+}
+
+#app .mt-s6{
+  margin-top: 24px;
 }
 
 #app .block{
@@ -3334,8 +3551,68 @@ video {
   height: 1px;
 }
 
+#app .h-\[106px\]{
+  height: 106px;
+}
+
 #app .h-\[538px\]{
   height: 538px;
+}
+
+#app .h-full{
+  height: 100%;
+}
+
+#app .h-\[106px\]{
+  height: 106px;
+}
+
+#app .h-full{
+  height: 100%;
+}
+
+#app .h-\[106px\]{
+  height: 106px;
+}
+
+#app .h-full{
+  height: 100%;
+}
+
+#app .h-\[106px\]{
+  height: 106px;
+}
+
+#app .h-full{
+  height: 100%;
+}
+
+#app .h-\[106px\]{
+  height: 106px;
+}
+
+#app .h-full{
+  height: 100%;
+}
+
+#app .h-\[106px\]{
+  height: 106px;
+}
+
+#app .h-full{
+  height: 100%;
+}
+
+#app .h-\[106px\]{
+  height: 106px;
+}
+
+#app .h-full{
+  height: 100%;
+}
+
+#app .h-\[106px\]{
+  height: 106px;
 }
 
 #app .max-h-\[800px\]{
@@ -3412,16 +3689,16 @@ video {
   width: 720px;
 }
 
-#app .w-\[150px\]{
-  width: 150px;
-}
-
 #app .w-\[460px\]{
   width: 460px;
 }
 
 #app .w-\[300px\]{
   width: 300px;
+}
+
+#app .w-\[150px\]{
+  width: 150px;
 }
 
 #app .w-\[360px\]{
@@ -3446,6 +3723,30 @@ video {
 
 #app .w-\[236px\]{
   width: 236px;
+}
+
+#app .w-full{
+  width: 100%;
+}
+
+#app .w-min{
+  width: -webkit-min-content;
+  width: -moz-min-content;
+  width: min-content;
+}
+
+#app .w-full{
+  width: 100%;
+}
+
+#app .w-min{
+  width: -webkit-min-content;
+  width: -moz-min-content;
+  width: min-content;
+}
+
+#app .w-full{
+  width: 100%;
 }
 
 #app .max-w-content{
@@ -3508,6 +3809,10 @@ video {
   flex: none;
 }
 
+#app .flex-1{
+  flex: 1 1 0%;
+}
+
 #app .flex-shrink{
   flex-shrink: 1;
 }
@@ -3518,6 +3823,10 @@ video {
 
 #app .shrink-0{
   flex-shrink: 0;
+}
+
+#app .shrink{
+  flex-shrink: 1;
 }
 
 #app .flex-grow{
@@ -3543,6 +3852,12 @@ video {
 
 #app .list-none{
   list-style-type: none;
+}
+
+#app .appearance-none{
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
 
 #app .grid-cols-1{
@@ -3645,6 +3960,10 @@ video {
   gap: 8px;
 }
 
+#app .gap-s6{
+  gap: 24px;
+}
+
 #app .justify-self-end{
   justify-self: end;
 }
@@ -3675,6 +3994,10 @@ video {
   border-radius: 50%;
 }
 
+#app .rounded-none{
+  border-radius: 0px;
+}
+
 #app .border{
   border-width: 1px;
 }
@@ -3683,11 +4006,47 @@ video {
   border-width: 1px;
 }
 
+#app .border-\[1px\]{
+  border-width: 1px;
+}
+
 #app .border-t-2{
   border-top-width: 2px;
 }
 
 #app .border-b-1{
+  border-bottom-width: 1px;
+}
+
+#app .border-t-\[1px\]{
+  border-top-width: 1px;
+}
+
+#app .border-b-\[1px\]{
+  border-bottom-width: 1px;
+}
+
+#app .border-t-\[1px\]{
+  border-top-width: 1px;
+}
+
+#app .border-b-\[1px\]{
+  border-bottom-width: 1px;
+}
+
+#app .border-t-\[1px\]{
+  border-top-width: 1px;
+}
+
+#app .border-b-\[1px\]{
+  border-bottom-width: 1px;
+}
+
+#app .border-t-\[1px\]{
+  border-top-width: 1px;
+}
+
+#app .border-b-\[1px\]{
   border-bottom-width: 1px;
 }
 
@@ -3770,6 +4129,127 @@ video {
 #app .bg-black-100{
   --tw-bg-opacity: 1;
   background-color: rgb(230 230 230 / var(--tw-bg-opacity));
+}
+
+#app .bg-secondary-50{
+  background-color: var(--secondary-50);
+}
+
+#app .bg-secondary-200{
+  background-color: var(--secondary-200);
+}
+
+#app .bg-black-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 247 247 / var(--tw-bg-opacity));
+}
+
+#app .bg-secondary-50{
+  background-color: var(--secondary-50);
+}
+
+#app .bg-secondary-200{
+  background-color: var(--secondary-200);
+}
+
+#app .bg-black-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 247 247 / var(--tw-bg-opacity));
+}
+
+#app .bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+#app .bg-secondary-50{
+  background-color: var(--secondary-50);
+}
+
+#app .bg-secondary-200{
+  background-color: var(--secondary-200);
+}
+
+#app .bg-black-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 247 247 / var(--tw-bg-opacity));
+}
+
+#app .bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+#app .bg-secondary-50{
+  background-color: var(--secondary-50);
+}
+
+#app .bg-secondary-200{
+  background-color: var(--secondary-200);
+}
+
+#app .bg-black-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 247 247 / var(--tw-bg-opacity));
+}
+
+#app .bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+#app .bg-secondary-50{
+  background-color: var(--secondary-50);
+}
+
+#app .bg-secondary-200{
+  background-color: var(--secondary-200);
+}
+
+#app .bg-black-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 247 247 / var(--tw-bg-opacity));
+}
+
+#app .bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+#app .bg-secondary-50{
+  background-color: var(--secondary-50);
+}
+
+#app .bg-secondary-200{
+  background-color: var(--secondary-200);
+}
+
+#app .bg-black-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 247 247 / var(--tw-bg-opacity));
+}
+
+#app .bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+#app .bg-secondary-50{
+  background-color: var(--secondary-50);
+}
+
+#app .bg-secondary-200{
+  background-color: var(--secondary-200);
+}
+
+#app .bg-black-50{
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 247 247 / var(--tw-bg-opacity));
+}
+
+#app .bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 #app .object-contain{
@@ -3968,6 +4448,301 @@ video {
   padding-right: 27px;
 }
 
+#app .py-s5{
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+#app .px-s7{
+  padding-left: 32px;
+  padding-right: 32px;
+}
+
+#app .py-s9{
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+#app .py-s7{
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+#app .px-s8{
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+#app .py-s3{
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
+#app .px-s2{
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
+#app .py-s5{
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+#app .px-s7{
+  padding-left: 32px;
+  padding-right: 32px;
+}
+
+#app .py-s9{
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+#app .py-s7{
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+#app .px-s8{
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+#app .py-s3{
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
+
+#app .px-s2{
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
+#app .py-s5{
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+#app .px-s7{
+  padding-left: 32px;
+  padding-right: 32px;
+}
+
+#app .py-s9{
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+#app .py-s7{
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+#app .px-s8{
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+#app .py-s1{
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+
+#app .px-s1{
+  padding-left: 4px;
+  padding-right: 4px;
+}
+
+#app .px-s2{
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
+#app .py-s2{
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+#app .py-s5{
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+#app .px-s7{
+  padding-left: 32px;
+  padding-right: 32px;
+}
+
+#app .py-s9{
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+#app .py-s7{
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+#app .px-s8{
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+#app .px-s2{
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
+#app .py-s2{
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+#app .py-s1{
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+
+#app .px-s1{
+  padding-left: 4px;
+  padding-right: 4px;
+}
+
+#app .py-s5{
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+#app .px-s7{
+  padding-left: 32px;
+  padding-right: 32px;
+}
+
+#app .py-s9{
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+#app .py-s7{
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+#app .px-s8{
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+#app .px-s3{
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
+#app .py-s2{
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+#app .py-s1{
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+
+#app .px-s1{
+  padding-left: 4px;
+  padding-right: 4px;
+}
+
+#app .py-s5{
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+#app .px-s7{
+  padding-left: 32px;
+  padding-right: 32px;
+}
+
+#app .py-s9{
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+#app .py-s7{
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+#app .px-s8{
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+#app .px-s3{
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
+#app .py-s2{
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+#app .py-s1{
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+
+#app .px-s1{
+  padding-left: 4px;
+  padding-right: 4px;
+}
+
+#app .py-s5{
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+#app .px-s7{
+  padding-left: 32px;
+  padding-right: 32px;
+}
+
+#app .py-s9{
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+#app .py-s7{
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+#app .px-s8{
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+#app .px-s3{
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
+#app .py-s2{
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+#app .py-s1{
+  padding-top: 4px;
+  padding-bottom: 4px;
+}
+
+#app .px-s1{
+  padding-left: 4px;
+  padding-right: 4px;
+}
+
 #app .pb-s14{
   padding-bottom: 160px;
 }
@@ -4052,6 +4827,66 @@ video {
   padding-bottom: 2px;
 }
 
+#app .pb-s10{
+  padding-bottom: 64px;
+}
+
+#app .pt-s9{
+  padding-top: 48px;
+}
+
+#app .pb-s10{
+  padding-bottom: 64px;
+}
+
+#app .pt-s9{
+  padding-top: 48px;
+}
+
+#app .pb-s10{
+  padding-bottom: 64px;
+}
+
+#app .pt-s9{
+  padding-top: 48px;
+}
+
+#app .pb-s10{
+  padding-bottom: 64px;
+}
+
+#app .pt-s9{
+  padding-top: 48px;
+}
+
+#app .pb-s10{
+  padding-bottom: 64px;
+}
+
+#app .pt-s9{
+  padding-top: 48px;
+}
+
+#app .pb-s10{
+  padding-bottom: 64px;
+}
+
+#app .pt-s9{
+  padding-top: 48px;
+}
+
+#app .pb-s10{
+  padding-bottom: 64px;
+}
+
+#app .pt-s9{
+  padding-top: 48px;
+}
+
+#app .text-left{
+  text-align: left;
+}
+
 #app .text-center{
   text-align: center;
 }
@@ -4070,6 +4905,10 @@ video {
 
 #app .font-light{
   font-weight: 300;
+}
+
+#app .font-bold{
+  font-weight: 700;
 }
 
 #app .uppercase{
@@ -4161,6 +5000,195 @@ video {
   color: rgb(206 206 206 / var(--tw-text-opacity));
 }
 
+#app .text-primary-800{
+  color: var(--primary-800);
+}
+
+#app .text-black-400{
+  --tw-text-opacity: 1;
+  color: rgb(157 157 157 / var(--tw-text-opacity));
+}
+
+#app .text-black-600{
+  --tw-text-opacity: 1;
+  color: rgb(108 108 108 / var(--tw-text-opacity));
+}
+
+#app .text-primary-900{
+  color: var(--primary-900);
+}
+
+#app .text-black-800{
+  --tw-text-opacity: 1;
+  color: rgb(59 59 59 / var(--tw-text-opacity));
+}
+
+#app .text-secondary-500{
+  color: var(--secondary-500);
+}
+
+#app .text-primary-800{
+  color: var(--primary-800);
+}
+
+#app .text-black-400{
+  --tw-text-opacity: 1;
+  color: rgb(157 157 157 / var(--tw-text-opacity));
+}
+
+#app .text-black-600{
+  --tw-text-opacity: 1;
+  color: rgb(108 108 108 / var(--tw-text-opacity));
+}
+
+#app .text-primary-900{
+  color: var(--primary-900);
+}
+
+#app .text-black-800{
+  --tw-text-opacity: 1;
+  color: rgb(59 59 59 / var(--tw-text-opacity));
+}
+
+#app .text-secondary-500{
+  color: var(--secondary-500);
+}
+
+#app .text-primary-800{
+  color: var(--primary-800);
+}
+
+#app .text-black-400{
+  --tw-text-opacity: 1;
+  color: rgb(157 157 157 / var(--tw-text-opacity));
+}
+
+#app .text-black-600{
+  --tw-text-opacity: 1;
+  color: rgb(108 108 108 / var(--tw-text-opacity));
+}
+
+#app .text-primary-900{
+  color: var(--primary-900);
+}
+
+#app .text-black-800{
+  --tw-text-opacity: 1;
+  color: rgb(59 59 59 / var(--tw-text-opacity));
+}
+
+#app .text-secondary-500{
+  color: var(--secondary-500);
+}
+
+#app .text-primary-800{
+  color: var(--primary-800);
+}
+
+#app .text-black-400{
+  --tw-text-opacity: 1;
+  color: rgb(157 157 157 / var(--tw-text-opacity));
+}
+
+#app .text-black-600{
+  --tw-text-opacity: 1;
+  color: rgb(108 108 108 / var(--tw-text-opacity));
+}
+
+#app .text-primary-900{
+  color: var(--primary-900);
+}
+
+#app .text-black-800{
+  --tw-text-opacity: 1;
+  color: rgb(59 59 59 / var(--tw-text-opacity));
+}
+
+#app .text-secondary-500{
+  color: var(--secondary-500);
+}
+
+#app .text-primary-800{
+  color: var(--primary-800);
+}
+
+#app .text-black-400{
+  --tw-text-opacity: 1;
+  color: rgb(157 157 157 / var(--tw-text-opacity));
+}
+
+#app .text-black-600{
+  --tw-text-opacity: 1;
+  color: rgb(108 108 108 / var(--tw-text-opacity));
+}
+
+#app .text-primary-900{
+  color: var(--primary-900);
+}
+
+#app .text-black-800{
+  --tw-text-opacity: 1;
+  color: rgb(59 59 59 / var(--tw-text-opacity));
+}
+
+#app .text-secondary-500{
+  color: var(--secondary-500);
+}
+
+#app .text-primary-800{
+  color: var(--primary-800);
+}
+
+#app .text-black-400{
+  --tw-text-opacity: 1;
+  color: rgb(157 157 157 / var(--tw-text-opacity));
+}
+
+#app .text-black-600{
+  --tw-text-opacity: 1;
+  color: rgb(108 108 108 / var(--tw-text-opacity));
+}
+
+#app .text-primary-900{
+  color: var(--primary-900);
+}
+
+#app .text-black-800{
+  --tw-text-opacity: 1;
+  color: rgb(59 59 59 / var(--tw-text-opacity));
+}
+
+#app .text-secondary-500{
+  color: var(--secondary-500);
+}
+
+#app .text-primary-800{
+  color: var(--primary-800);
+}
+
+#app .text-black-400{
+  --tw-text-opacity: 1;
+  color: rgb(157 157 157 / var(--tw-text-opacity));
+}
+
+#app .text-black-600{
+  --tw-text-opacity: 1;
+  color: rgb(108 108 108 / var(--tw-text-opacity));
+}
+
+#app .text-primary-900{
+  color: var(--primary-900);
+}
+
+#app .text-black-800{
+  --tw-text-opacity: 1;
+  color: rgb(59 59 59 / var(--tw-text-opacity));
+}
+
+#app .text-secondary-500{
+  color: var(--secondary-500);
+}
+
 #app .underline{
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -4229,6 +5257,14 @@ video {
   font-weight: 500;
   text-transform: capitalize;
   letter-spacing: 0;
+}
+
+#app .hover\:bg-primary-50:hover{
+  background-color: var(--primary-50);
+}
+
+#app .hover\:bg-secondary-50:hover{
+  background-color: var(--secondary-50);
 }
 
 #app .disabled\:hidden:disabled{
