--- a/css/cart-drawer.css
+++ b/css/cart-drawer.css
@@ -1,3 +1,9 @@
 .cart-item:not(:last-child){
     @apply border-b-1 border-black-100;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
