--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -2,7 +2,7 @@
 <script src="{{ 'collection-filter.js' | asset_url }}" defer="defer"></script>
 
 
-{% assign badgeTags = "new,best seller,sale" | split:"," %}
+{% assign badgeTags = "new,best seller,sale" | split: "," %}
 
 
 {% liquid
@@ -37,14 +37,14 @@
             <label for="color" class="relative flex items-center text-black-800">
                 <select class="filter" name="color" data-filter="Color">
                     <option selected disabled value="color">Color</option>
-                    <option value="">All</option>
+                    <option value="all">All Colors</option>
                 </select>
                 {% render '8-down', class: 'text-black-200 absolute right-0' %}
             </label>
             <label for="size" class="relative flex items-center text-black-800">
                 <select class="filter" name="size" data-filter="Size">
                     <option selected disabled value="size">Size</option>
-                    <option value="">All</option>
+                    <option value="all">All Sizes</option>
                 </select>
                 {% render '8-down', class: 'text-black-200 absolute right-0' %}
             </label>
@@ -90,44 +90,38 @@
         {% endif %}
             <div id="filtered-collection-grid" data-url="{{ collection.url }}" data-section="{{ section.id }}" class="grid grid-cols-3 gap-s10 flex-1">
                 {% for product in collection.products %}
-                    <div id="product-{{ product.id }}" class="flex-1 relative">
-                        {% assign productBadgeType = null %}
-                        {% for tag in product.tags %}
-                            {% if badgeTags contains tag %}
-                                {% assign productBadgeType = tag %}
-                            {% endif %}
-                        {% endfor %}
-                        {% if productBadgeType %}
-                            <div class="badge {{ productBadgeType | split: " " | join: "" }}">
-                                {% if productBadgeType == "best seller" %}
-                                    {% render "best-seller-star" %}
+                    <modal-opener data-modal="#ProductModal-{{ product.id }}" id="product-{{ product.id }}">
+                        <button class="flex-1 w-full relative text-left">
+                            {% assign productBadgeType = null %}
+                            {% for tag in product.tags %}
+                                {% if badgeTags contains tag %}
+                                    {% assign productBadgeType = tag %}
                                 {% endif %}
-                                <p class="faux-h6 mr-[-2px]">
-                                    {{ productBadgeType | uppercase }}
-                                </p>
-                            </div>
-                        {% endif %}
-                        <div>
-                            {{ product | image_url: width: 200 | image_tag: class: 'w-full aspect-[4/5] object-contain', loading: 'lazy' }}
-                        </div>
-                        <div class="mt-s6">
-                            <h3 class="faux-p-lg font-bold text-black-900">{{ product.title }}</h3>
-                            {% comment %} <p class="mt-s5 text-black-400 uppercase">Brand/Collection</p> {% endcomment %}
-                            <p class="mt-s5">${{ product.price | money_without_currency }}</p>
-                            <div class="h-s6 flex items-center gap-s1 mt-s3">
-                                <div class="product-variant--tile">
-                                    <div class="dot bg-black-600"></div>
-                                    <div class="disc"></div>
+                            {% endfor %}
+                            {% if productBadgeType %}
+                                <div class="badge {{ productBadgeType | split: " " | join: "" }}">
+                                    {% if productBadgeType == "best seller" %}
+                                        {% render "best-seller-star" %}
+                                    {% endif %}
+                                    <p class="faux-h6 mr-[-2px]">
+                                        {{ productBadgeType | uppercase }}
+                                    </p>
                                 </div>
-                                <div class="product-variant--tile">
-                                    <div class="dot bg-black-600"></div>
-                                    <div class="disc"></div>
-                                </div>
-                                <p class="faux-p-xs text-black-400">+5</p>
+                            {% endif %}
+                            <div>
+                                {{ product | image_url: width: 200 | image_tag: class: 'w-full aspect-[4/5] object-contain', loading: 'lazy' }}
                             </div>
-                        </div>
-                        {% render 'quick-shop-modal', product: product %}
-                    </div>
+                            <div class="mt-s6">
+                                <h3 class="faux-p-lg font-bold text-black-900">{{ product.title }}</h3>
+                                {% comment %} <p class="mt-s5 text-black-400 uppercase">Brand/Collection</p> {% endcomment %}
+                                <p class="mt-s5">${{ product.price | money_without_currency }}</p>
+                                <div class="h-s6 flex items-center gap-s1 mt-s3">
+                                    {% render 'product-colors', product: product, size: 'sm', preview: true %}
+                                </div>
+                            </div>
+                        </button>
+                    </modal-opener>
+                    {% render 'quick-shop-modal', product: product %}
                 {% endfor %}
             </div>
             <script id="collection-data" type="application/json">
@@ -135,115 +129,6 @@
             </script>
     </div>
 </div>
-
-{% comment %}
-<div class="section-{{ section.id }}-padding">
-    {% endcomment %}
-  {% comment %} Sort is the first tabbable element when filter type is vertical {% endcomment %}
-  {% comment %}
-  {%- if section.settings.enable_sorting and section.settings.filter_type == 'vertical' -%}
-    <facet-filters-form class="facets facets-vertical-sort page-width small-hide no-js-hidden">
-      <form class="facets-vertical-form" id="FacetSortForm">
-        <div class="facet-filters sorting caption">
-          <div class="facet-filters__field">
-            <h2 class="facet-filters__label caption-large text-body">
-              <label for="SortBy">{{ 'products.facets.sort_by_label' | t }}</label>
-            </h2>
-            <div class="select">
-              {%- assign sort_by = collection.sort_by | default: collection.default_sort_by -%}
-              <select name="sort_by" class="facet-filters__sort select__select caption-large" id="SortBy" aria-describedby="a11y-refresh-page-message">
-                {%- for option in collection.sort_options -%}
-                  <option value="{{ option.value | escape }}"{% if option.value == sort_by %} selected="selected"{% endif %}>{{ option.name | escape }}</option>
-                {%- endfor -%}
-              </select>
-              {% render 'icon-caret' %}
-            </div>
-          </div>
-          <noscript>
-            <button type="submit" class="facets__button-no-js button button--secondary">{{ 'products.facets.sort_button' | t }}</button>
-          </noscript>
-        </div>
-
-        <div class="product-count-vertical light" role="status">
-          <h2 class="product-count__text text-body">
-            <span id="ProductCountDesktop">
-              {%- if collection.results_count -%}
-                {{ 'templates.search.results_with_count' | t: terms: collection.terms, count: collection.results_count }}
-              {%- elsif collection.products_count == collection.all_products_count -%}
-                {{ 'products.facets.product_count_simple' | t: count: collection.products_count }}
-              {%- else -%}
-                {{ 'products.facets.product_count' | t: product_count: collection.products_count, count: collection.all_products_count }}
-              {%- endif -%}
-            </span>
-          </h2>
-          <div class="loading-overlay__spinner">
-            <svg aria-hidden="true" focusable="false" role="presentation" class="spinner" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
-              <circle class="path" fill="none" stroke-width="6" cx="33" cy="33" r="30"></circle>
-            </svg>
-          </div>
-        </div>
-      </form>
-    </facet-filters-form>
-  {%- endif -%}
-
-  <div class="{% if section.settings.filter_type == 'vertical' %} facets-vertical page-width{% endif %}">
-    <script src="{{ 'facets.js' | asset_url }}" defer="defer"></script>
-    {%- if section.settings.enable_filtering or section.settings.enable_sorting -%}
-      <aside aria-labelledby="verticalTitle" class="facets-wrapper{% unless section.settings.enable_filtering %} facets-wrapper--no-filters{% endunless %}{% if section.settings.filter_type != 'vertical' %} page-width{% endif %}" id="main-collection-filters" data-id="{{ section.id }}">
-        {% render 'facets', results: collection, enable_filtering: section.settings.enable_filtering, enable_sorting: section.settings.enable_sorting, filter_type: section.settings.filter_type %}
-      </aside>
-    {%- endif -%}
-
-    <div class="product-grid-container" id="ProductGridContainer">
-      {%- paginate collection.products by section.settings.products_per_page -%}
-        {%- if collection.products.size == 0 -%}
-          <div class="collection collection--empty page-width" id="product-grid" data-id="{{ section.id }}">
-            <div class="loading-overlay gradient"></div>
-            <div class="title-wrapper center">
-              <h2 class="title title--primary">
-                {{ 'sections.collection_template.empty' | t }}<br>
-                {{ 'sections.collection_template.use_fewer_filters_html' | t: link: collection.url, class: "underlined-link link" }}
-              </h2>
-            </div>
-          </div>
-        {%- else -%}
-          <div class="collection{% if section.settings.filter_type != 'vertical' %} page-width{% endif %}">
-            <div class="loading-overlay gradient"></div>
-
-            <ul id="product-grid" data-id="{{ section.id }}" class="
-              grid product-grid grid--{{ section.settings.columns_mobile }}-col-tablet-down
-              grid--{{ section.settings.columns_desktop }}-col-desktop">
-              {%- for product in collection.products -%}
-                {% assign lazy_load = false %}
-                {%- if forloop.index > 2 -%}
-                  {%- assign lazy_load = true -%}
-                {%- endif -%}
-                <li class="grid__item">
-                  {% render 'card-product',
-                    card_product: product,
-                    media_aspect_ratio: section.settings.image_ratio,
-                    show_secondary_image: section.settings.show_secondary_image,
-                    show_vendor: section.settings.show_vendor,
-                    show_rating: section.settings.show_rating,
-                    lazy_load: lazy_load,
-                    show_quick_add: section.settings.enable_quick_add,
-                    section_id: section.id
-
-                  %}
-                </li>
-              {%- endfor -%}
-            </ul>
-
-            {%- if paginate.pages > 1 -%}
-              {% render 'pagination', paginate: paginate, anchor: '' %}
-            {%- endif -%}
-          </div>
-        {%- endif -%}
-      {%- endpaginate -%}
-    </div>
-  </div>
-</div>
-{% endcomment %}
 
 {% schema %}
 {
