--- a/assets/application.css.liquid
+++ b/assets/application.css.liquid
@@ -393,6 +393,7 @@ html {
     margin-left: auto;
     margin-right: auto;
     display: flex;
+    height: 300px;
     max-width: 1200px;
     gap: 40px;
     --tw-bg-opacity: 1;
@@ -419,6 +420,10 @@ html {
   .dropdown__link--level-1{
     text-transform: uppercase;
     color: var(--primary-800);
+  }
+
+  .dropdown__list-item--level-1:not(:first-child){
+    margin-top: 16px;
   }
 
   .dropdown__list-item--level-2:not(:first-child){
@@ -3096,62 +3101,6 @@ video {
   top: 50%;
 }
 
-#app .top-0{
-  top: 0px;
-}
-
-#app .left-0{
-  left: 0px;
-}
-
-#app .top-0{
-  top: 0px;
-}
-
-#app .left-0{
-  left: 0px;
-}
-
-#app .top-0{
-  top: 0px;
-}
-
-#app .left-0{
-  left: 0px;
-}
-
-#app .top-0{
-  top: 0px;
-}
-
-#app .left-0{
-  left: 0px;
-}
-
-#app .top-0{
-  top: 0px;
-}
-
-#app .left-0{
-  left: 0px;
-}
-
-#app .top-0{
-  top: 0px;
-}
-
-#app .left-0{
-  left: 0px;
-}
-
-#app .top-0{
-  top: 0px;
-}
-
-#app .left-0{
-  left: 0px;
-}
-
 #app .isolate{
   isolation: isolate;
 }
@@ -3162,10 +3111,6 @@ video {
 
 #app .z-20{
   z-index: 20;
-}
-
-#app .z-10{
-  z-index: 10;
 }
 
 #app .order-first{
@@ -3200,11 +3145,6 @@ video {
 #app .mx-s8{
   margin-left: 40px;
   margin-right: 40px;
-}
-
-#app .mx-auto{
-  margin-left: auto;
-  margin-right: auto;
 }
 
 #app .mr-s4{
@@ -3301,146 +3241,6 @@ video {
 
 #app .mt-\[28px\]{
   margin-top: 28px;
-}
-
-#app .mt-s5{
-  margin-top: 20px;
-}
-
-#app .mt-s4{
-  margin-top: 16px;
-}
-
-#app .mt-0{
-  margin-top: 0px;
-}
-
-#app .mt-s8{
-  margin-top: 40px;
-}
-
-#app .mt-s6{
-  margin-top: 24px;
-}
-
-#app .mt-s5{
-  margin-top: 20px;
-}
-
-#app .mt-s4{
-  margin-top: 16px;
-}
-
-#app .mt-0{
-  margin-top: 0px;
-}
-
-#app .mt-s8{
-  margin-top: 40px;
-}
-
-#app .mt-s6{
-  margin-top: 24px;
-}
-
-#app .mt-s5{
-  margin-top: 20px;
-}
-
-#app .mt-s4{
-  margin-top: 16px;
-}
-
-#app .mt-0{
-  margin-top: 0px;
-}
-
-#app .mt-s8{
-  margin-top: 40px;
-}
-
-#app .mt-s6{
-  margin-top: 24px;
-}
-
-#app .mt-s5{
-  margin-top: 20px;
-}
-
-#app .mt-s4{
-  margin-top: 16px;
-}
-
-#app .mt-0{
-  margin-top: 0px;
-}
-
-#app .mt-s8{
-  margin-top: 40px;
-}
-
-#app .mt-s6{
-  margin-top: 24px;
-}
-
-#app .mt-s5{
-  margin-top: 20px;
-}
-
-#app .mt-s4{
-  margin-top: 16px;
-}
-
-#app .mt-0{
-  margin-top: 0px;
-}
-
-#app .mt-s8{
-  margin-top: 40px;
-}
-
-#app .mt-s6{
-  margin-top: 24px;
-}
-
-#app .mt-s5{
-  margin-top: 20px;
-}
-
-#app .mt-s4{
-  margin-top: 16px;
-}
-
-#app .mt-0{
-  margin-top: 0px;
-}
-
-#app .mt-s8{
-  margin-top: 40px;
-}
-
-#app .mt-s6{
-  margin-top: 24px;
-}
-
-#app .mt-s5{
-  margin-top: 20px;
-}
-
-#app .mt-s4{
-  margin-top: 16px;
-}
-
-#app .mt-0{
-  margin-top: 0px;
-}
-
-#app .mt-s8{
-  margin-top: 40px;
-}
-
-#app .mt-s6{
-  margin-top: 24px;
 }
 
 #app .block{
@@ -3551,68 +3351,16 @@ video {
   height: 1px;
 }
 
+#app .h-\[256px\]{
+  height: 256px;
+}
+
 #app .h-\[106px\]{
   height: 106px;
 }
 
 #app .h-\[538px\]{
   height: 538px;
-}
-
-#app .h-full{
-  height: 100%;
-}
-
-#app .h-\[106px\]{
-  height: 106px;
-}
-
-#app .h-full{
-  height: 100%;
-}
-
-#app .h-\[106px\]{
-  height: 106px;
-}
-
-#app .h-full{
-  height: 100%;
-}
-
-#app .h-\[106px\]{
-  height: 106px;
-}
-
-#app .h-full{
-  height: 100%;
-}
-
-#app .h-\[106px\]{
-  height: 106px;
-}
-
-#app .h-full{
-  height: 100%;
-}
-
-#app .h-\[106px\]{
-  height: 106px;
-}
-
-#app .h-full{
-  height: 100%;
-}
-
-#app .h-\[106px\]{
-  height: 106px;
-}
-
-#app .h-full{
-  height: 100%;
-}
-
-#app .h-\[106px\]{
-  height: 106px;
 }
 
 #app .max-h-\[800px\]{
@@ -3677,6 +3425,12 @@ video {
   width: 32px;
 }
 
+#app .w-min{
+  width: -webkit-min-content;
+  width: -moz-min-content;
+  width: min-content;
+}
+
 #app .w-1\/2{
   width: 50%;
 }
@@ -3709,10 +3463,6 @@ video {
   width: 180px;
 }
 
-#app .w-\[60px\]{
-  width: 60px;
-}
-
 #app .w-\[2px\]{
   width: 2px;
 }
@@ -3723,30 +3473,6 @@ video {
 
 #app .w-\[236px\]{
   width: 236px;
-}
-
-#app .w-full{
-  width: 100%;
-}
-
-#app .w-min{
-  width: -webkit-min-content;
-  width: -moz-min-content;
-  width: min-content;
-}
-
-#app .w-full{
-  width: 100%;
-}
-
-#app .w-min{
-  width: -webkit-min-content;
-  width: -moz-min-content;
-  width: min-content;
-}
-
-#app .w-full{
-  width: 100%;
 }
 
 #app .max-w-content{
@@ -3809,10 +3535,6 @@ video {
   flex: none;
 }
 
-#app .flex-1{
-  flex: 1 1 0%;
-}
-
 #app .flex-shrink{
   flex-shrink: 1;
 }
@@ -3823,10 +3545,6 @@ video {
 
 #app .shrink-0{
   flex-shrink: 0;
-}
-
-#app .shrink{
-  flex-shrink: 1;
 }
 
 #app .flex-grow{
@@ -3960,10 +3678,6 @@ video {
   gap: 8px;
 }
 
-#app .gap-s6{
-  gap: 24px;
-}
-
 #app .justify-self-end{
   justify-self: end;
 }
@@ -4015,30 +3729,6 @@ video {
 }
 
 #app .border-b-1{
-  border-bottom-width: 1px;
-}
-
-#app .border-t-\[1px\]{
-  border-top-width: 1px;
-}
-
-#app .border-b-\[1px\]{
-  border-bottom-width: 1px;
-}
-
-#app .border-t-\[1px\]{
-  border-top-width: 1px;
-}
-
-#app .border-b-\[1px\]{
-  border-bottom-width: 1px;
-}
-
-#app .border-t-\[1px\]{
-  border-top-width: 1px;
-}
-
-#app .border-b-\[1px\]{
   border-bottom-width: 1px;
 }
 
@@ -4129,127 +3819,6 @@ video {
 #app .bg-black-100{
   --tw-bg-opacity: 1;
   background-color: rgb(230 230 230 / var(--tw-bg-opacity));
-}
-
-#app .bg-secondary-50{
-  background-color: var(--secondary-50);
-}
-
-#app .bg-secondary-200{
-  background-color: var(--secondary-200);
-}
-
-#app .bg-black-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(247 247 247 / var(--tw-bg-opacity));
-}
-
-#app .bg-secondary-50{
-  background-color: var(--secondary-50);
-}
-
-#app .bg-secondary-200{
-  background-color: var(--secondary-200);
-}
-
-#app .bg-black-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(247 247 247 / var(--tw-bg-opacity));
-}
-
-#app .bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-#app .bg-secondary-50{
-  background-color: var(--secondary-50);
-}
-
-#app .bg-secondary-200{
-  background-color: var(--secondary-200);
-}
-
-#app .bg-black-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(247 247 247 / var(--tw-bg-opacity));
-}
-
-#app .bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-#app .bg-secondary-50{
-  background-color: var(--secondary-50);
-}
-
-#app .bg-secondary-200{
-  background-color: var(--secondary-200);
-}
-
-#app .bg-black-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(247 247 247 / var(--tw-bg-opacity));
-}
-
-#app .bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-#app .bg-secondary-50{
-  background-color: var(--secondary-50);
-}
-
-#app .bg-secondary-200{
-  background-color: var(--secondary-200);
-}
-
-#app .bg-black-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(247 247 247 / var(--tw-bg-opacity));
-}
-
-#app .bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-#app .bg-secondary-50{
-  background-color: var(--secondary-50);
-}
-
-#app .bg-secondary-200{
-  background-color: var(--secondary-200);
-}
-
-#app .bg-black-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(247 247 247 / var(--tw-bg-opacity));
-}
-
-#app .bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-#app .bg-secondary-50{
-  background-color: var(--secondary-50);
-}
-
-#app .bg-secondary-200{
-  background-color: var(--secondary-200);
-}
-
-#app .bg-black-50{
-  --tw-bg-opacity: 1;
-  background-color: rgb(247 247 247 / var(--tw-bg-opacity));
-}
-
-#app .bg-white{
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 #app .object-contain{
@@ -4443,304 +4012,14 @@ video {
   padding-bottom: 4px;
 }
 
+#app .px-s3{
+  padding-left: 12px;
+  padding-right: 12px;
+}
+
 #app .px-\[27px\]{
   padding-left: 27px;
   padding-right: 27px;
-}
-
-#app .py-s5{
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-#app .px-s7{
-  padding-left: 32px;
-  padding-right: 32px;
-}
-
-#app .py-s9{
-  padding-top: 48px;
-  padding-bottom: 48px;
-}
-
-#app .py-s7{
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-#app .px-s8{
-  padding-left: 40px;
-  padding-right: 40px;
-}
-
-#app .py-s3{
-  padding-top: 12px;
-  padding-bottom: 12px;
-}
-
-#app .px-s2{
-  padding-left: 8px;
-  padding-right: 8px;
-}
-
-#app .py-s5{
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-#app .px-s7{
-  padding-left: 32px;
-  padding-right: 32px;
-}
-
-#app .py-s9{
-  padding-top: 48px;
-  padding-bottom: 48px;
-}
-
-#app .py-s7{
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-#app .px-s8{
-  padding-left: 40px;
-  padding-right: 40px;
-}
-
-#app .py-s3{
-  padding-top: 12px;
-  padding-bottom: 12px;
-}
-
-#app .px-s2{
-  padding-left: 8px;
-  padding-right: 8px;
-}
-
-#app .py-s5{
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-#app .px-s7{
-  padding-left: 32px;
-  padding-right: 32px;
-}
-
-#app .py-s9{
-  padding-top: 48px;
-  padding-bottom: 48px;
-}
-
-#app .py-s7{
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-#app .px-s8{
-  padding-left: 40px;
-  padding-right: 40px;
-}
-
-#app .py-s1{
-  padding-top: 4px;
-  padding-bottom: 4px;
-}
-
-#app .px-s1{
-  padding-left: 4px;
-  padding-right: 4px;
-}
-
-#app .px-s2{
-  padding-left: 8px;
-  padding-right: 8px;
-}
-
-#app .py-s2{
-  padding-top: 8px;
-  padding-bottom: 8px;
-}
-
-#app .py-s5{
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-#app .px-s7{
-  padding-left: 32px;
-  padding-right: 32px;
-}
-
-#app .py-s9{
-  padding-top: 48px;
-  padding-bottom: 48px;
-}
-
-#app .py-s7{
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-#app .px-s8{
-  padding-left: 40px;
-  padding-right: 40px;
-}
-
-#app .px-s2{
-  padding-left: 8px;
-  padding-right: 8px;
-}
-
-#app .py-s2{
-  padding-top: 8px;
-  padding-bottom: 8px;
-}
-
-#app .py-s1{
-  padding-top: 4px;
-  padding-bottom: 4px;
-}
-
-#app .px-s1{
-  padding-left: 4px;
-  padding-right: 4px;
-}
-
-#app .py-s5{
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-#app .px-s7{
-  padding-left: 32px;
-  padding-right: 32px;
-}
-
-#app .py-s9{
-  padding-top: 48px;
-  padding-bottom: 48px;
-}
-
-#app .py-s7{
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-#app .px-s8{
-  padding-left: 40px;
-  padding-right: 40px;
-}
-
-#app .px-s3{
-  padding-left: 12px;
-  padding-right: 12px;
-}
-
-#app .py-s2{
-  padding-top: 8px;
-  padding-bottom: 8px;
-}
-
-#app .py-s1{
-  padding-top: 4px;
-  padding-bottom: 4px;
-}
-
-#app .px-s1{
-  padding-left: 4px;
-  padding-right: 4px;
-}
-
-#app .py-s5{
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-#app .px-s7{
-  padding-left: 32px;
-  padding-right: 32px;
-}
-
-#app .py-s9{
-  padding-top: 48px;
-  padding-bottom: 48px;
-}
-
-#app .py-s7{
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-#app .px-s8{
-  padding-left: 40px;
-  padding-right: 40px;
-}
-
-#app .px-s3{
-  padding-left: 12px;
-  padding-right: 12px;
-}
-
-#app .py-s2{
-  padding-top: 8px;
-  padding-bottom: 8px;
-}
-
-#app .py-s1{
-  padding-top: 4px;
-  padding-bottom: 4px;
-}
-
-#app .px-s1{
-  padding-left: 4px;
-  padding-right: 4px;
-}
-
-#app .py-s5{
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
-
-#app .px-s7{
-  padding-left: 32px;
-  padding-right: 32px;
-}
-
-#app .py-s9{
-  padding-top: 48px;
-  padding-bottom: 48px;
-}
-
-#app .py-s7{
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
-
-#app .px-s8{
-  padding-left: 40px;
-  padding-right: 40px;
-}
-
-#app .px-s3{
-  padding-left: 12px;
-  padding-right: 12px;
-}
-
-#app .py-s2{
-  padding-top: 8px;
-  padding-bottom: 8px;
-}
-
-#app .py-s1{
-  padding-top: 4px;
-  padding-bottom: 4px;
-}
-
-#app .px-s1{
-  padding-left: 4px;
-  padding-right: 4px;
 }
 
 #app .pb-s14{
@@ -4827,62 +4106,6 @@ video {
   padding-bottom: 2px;
 }
 
-#app .pb-s10{
-  padding-bottom: 64px;
-}
-
-#app .pt-s9{
-  padding-top: 48px;
-}
-
-#app .pb-s10{
-  padding-bottom: 64px;
-}
-
-#app .pt-s9{
-  padding-top: 48px;
-}
-
-#app .pb-s10{
-  padding-bottom: 64px;
-}
-
-#app .pt-s9{
-  padding-top: 48px;
-}
-
-#app .pb-s10{
-  padding-bottom: 64px;
-}
-
-#app .pt-s9{
-  padding-top: 48px;
-}
-
-#app .pb-s10{
-  padding-bottom: 64px;
-}
-
-#app .pt-s9{
-  padding-top: 48px;
-}
-
-#app .pb-s10{
-  padding-bottom: 64px;
-}
-
-#app .pt-s9{
-  padding-top: 48px;
-}
-
-#app .pb-s10{
-  padding-bottom: 64px;
-}
-
-#app .pt-s9{
-  padding-top: 48px;
-}
-
 #app .text-left{
   text-align: left;
 }
@@ -4905,10 +4128,6 @@ video {
 
 #app .font-light{
   font-weight: 300;
-}
-
-#app .font-bold{
-  font-weight: 700;
 }
 
 #app .uppercase{
@@ -5000,195 +4219,6 @@ video {
   color: rgb(206 206 206 / var(--tw-text-opacity));
 }
 
-#app .text-primary-800{
-  color: var(--primary-800);
-}
-
-#app .text-black-400{
-  --tw-text-opacity: 1;
-  color: rgb(157 157 157 / var(--tw-text-opacity));
-}
-
-#app .text-black-600{
-  --tw-text-opacity: 1;
-  color: rgb(108 108 108 / var(--tw-text-opacity));
-}
-
-#app .text-primary-900{
-  color: var(--primary-900);
-}
-
-#app .text-black-800{
-  --tw-text-opacity: 1;
-  color: rgb(59 59 59 / var(--tw-text-opacity));
-}
-
-#app .text-secondary-500{
-  color: var(--secondary-500);
-}
-
-#app .text-primary-800{
-  color: var(--primary-800);
-}
-
-#app .text-black-400{
-  --tw-text-opacity: 1;
-  color: rgb(157 157 157 / var(--tw-text-opacity));
-}
-
-#app .text-black-600{
-  --tw-text-opacity: 1;
-  color: rgb(108 108 108 / var(--tw-text-opacity));
-}
-
-#app .text-primary-900{
-  color: var(--primary-900);
-}
-
-#app .text-black-800{
-  --tw-text-opacity: 1;
-  color: rgb(59 59 59 / var(--tw-text-opacity));
-}
-
-#app .text-secondary-500{
-  color: var(--secondary-500);
-}
-
-#app .text-primary-800{
-  color: var(--primary-800);
-}
-
-#app .text-black-400{
-  --tw-text-opacity: 1;
-  color: rgb(157 157 157 / var(--tw-text-opacity));
-}
-
-#app .text-black-600{
-  --tw-text-opacity: 1;
-  color: rgb(108 108 108 / var(--tw-text-opacity));
-}
-
-#app .text-primary-900{
-  color: var(--primary-900);
-}
-
-#app .text-black-800{
-  --tw-text-opacity: 1;
-  color: rgb(59 59 59 / var(--tw-text-opacity));
-}
-
-#app .text-secondary-500{
-  color: var(--secondary-500);
-}
-
-#app .text-primary-800{
-  color: var(--primary-800);
-}
-
-#app .text-black-400{
-  --tw-text-opacity: 1;
-  color: rgb(157 157 157 / var(--tw-text-opacity));
-}
-
-#app .text-black-600{
-  --tw-text-opacity: 1;
-  color: rgb(108 108 108 / var(--tw-text-opacity));
-}
-
-#app .text-primary-900{
-  color: var(--primary-900);
-}
-
-#app .text-black-800{
-  --tw-text-opacity: 1;
-  color: rgb(59 59 59 / var(--tw-text-opacity));
-}
-
-#app .text-secondary-500{
-  color: var(--secondary-500);
-}
-
-#app .text-primary-800{
-  color: var(--primary-800);
-}
-
-#app .text-black-400{
-  --tw-text-opacity: 1;
-  color: rgb(157 157 157 / var(--tw-text-opacity));
-}
-
-#app .text-black-600{
-  --tw-text-opacity: 1;
-  color: rgb(108 108 108 / var(--tw-text-opacity));
-}
-
-#app .text-primary-900{
-  color: var(--primary-900);
-}
-
-#app .text-black-800{
-  --tw-text-opacity: 1;
-  color: rgb(59 59 59 / var(--tw-text-opacity));
-}
-
-#app .text-secondary-500{
-  color: var(--secondary-500);
-}
-
-#app .text-primary-800{
-  color: var(--primary-800);
-}
-
-#app .text-black-400{
-  --tw-text-opacity: 1;
-  color: rgb(157 157 157 / var(--tw-text-opacity));
-}
-
-#app .text-black-600{
-  --tw-text-opacity: 1;
-  color: rgb(108 108 108 / var(--tw-text-opacity));
-}
-
-#app .text-primary-900{
-  color: var(--primary-900);
-}
-
-#app .text-black-800{
-  --tw-text-opacity: 1;
-  color: rgb(59 59 59 / var(--tw-text-opacity));
-}
-
-#app .text-secondary-500{
-  color: var(--secondary-500);
-}
-
-#app .text-primary-800{
-  color: var(--primary-800);
-}
-
-#app .text-black-400{
-  --tw-text-opacity: 1;
-  color: rgb(157 157 157 / var(--tw-text-opacity));
-}
-
-#app .text-black-600{
-  --tw-text-opacity: 1;
-  color: rgb(108 108 108 / var(--tw-text-opacity));
-}
-
-#app .text-primary-900{
-  color: var(--primary-900);
-}
-
-#app .text-black-800{
-  --tw-text-opacity: 1;
-  color: rgb(59 59 59 / var(--tw-text-opacity));
-}
-
-#app .text-secondary-500{
-  color: var(--secondary-500);
-}
-
 #app .underline{
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -5257,10 +4287,6 @@ video {
   font-weight: 500;
   text-transform: capitalize;
   letter-spacing: 0;
-}
-
-#app .hover\:bg-primary-50:hover{
-  background-color: var(--primary-50);
 }
 
 #app .hover\:bg-secondary-50:hover{
