sidebar menu edits, listing page hero, and other minor changes

--- a/assets/application.css.liquid
+++ b/assets/application.css.liquid
@@ -117,6 +117,16 @@ select.filter, select.sort {
   padding: 4px 0;
 }
 
+/* tiles */
+
+.product-tile:hover modal-opener.quick-shop-opener{
+  display:block;
+}
+
+modal-opener.quick-shop-opener{
+  display:none;
+}
+
 .badge{
   position: absolute;
   top: 12px;
@@ -3097,6 +3107,18 @@ video {
   top: 64px;
 }
 
+#app .bottom-s11{
+  bottom: 80px;
+}
+
+#app .bottom-s8{
+  bottom: 40px;
+}
+
+#app .left-1\/2{
+  left: 50%;
+}
+
 #app .top-1\/2{
   top: 50%;
 }
@@ -3145,6 +3167,11 @@ video {
 #app .mx-s8{
   margin-left: 40px;
   margin-right: 40px;
+}
+
+#app .mx-s2{
+  margin-left: 8px;
+  margin-right: 8px;
 }
 
 #app .mr-s4{
@@ -3347,6 +3374,10 @@ video {
   height: 360px;
 }
 
+#app .h-\[526px\]{
+  height: 526px;
+}
+
 #app .h-\[1px\]{
   height: 1px;
 }
@@ -3513,6 +3544,10 @@ video {
 
 #app .max-w-\[635px\]{
   max-width: 635px;
+}
+
+#app .max-w-\[1416px\]{
+  max-width: 1416px;
 }
 
 #app .max-w-\[230px\]{
@@ -4102,6 +4137,18 @@ video {
   padding-left: 8px;
 }
 
+#app .pt-s3{
+  padding-top: 12px;
+}
+
+#app .pt-s1{
+  padding-top: 4px;
+}
+
+#app .pt-\[6px\]{
+  padding-top: 6px;
+}
+
 #app .pb-\[2px\]{
   padding-bottom: 2px;
 }
@@ -4446,6 +4493,10 @@ video {
 
   #app .md\:pr-s5{
     padding-right: 20px;
+  }
+
+  #app .md\:pb-s13{
+    padding-bottom: 120px;
   }
 
   #app .md\:pt-s13{
